# Mod-Updater

./: .gitignore  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  agent.yaml  build.rs  contexto_total.txt
src/: download.rs  lib.rs  main.rs  manage_mods.rs  paths_vars.rs
src/common/: mod.rs
src/fetch/: async_download.rs  curseforge_api.rs  datapack_search.rs  download.rs  fetch_from_api.rs  mod.rs  modrinth_api.rs  search.rs  search_provider.rs  single_datapack_search.rs  single_mod_search.rs
src/local_datapacks_ops/: async_reader.rs  mod.rs  models.rs  scanner.rs
src/local_mods_ops/: async_reader.rs  cache.rs  fs_ops.rs  mod.rs  models.rs  scanner.rs
src/local_mods_ops/parsers/: fabric_quilt.rs  forge_neoforge.rs  mod.rs
src/manage_mods/: async_reader.rs  cache.rs  fs_ops.rs  memory.rs  mod.rs  models.rs  profiles.rs  scanner.rs
src/profiles/: mod.rs
src/ui/: app.rs  datapacks.rs  event_handlers.rs  explorer.rs  mod.rs  modals.rs  modpacks.rs  profiles.rs  search_modal.rs  tui_theme.rs  types.rs  utils.rs
src/utils/: mod.rs  modrinth_api.rs
tests/: api_balancing_tests.rs  cache_tests.rs  curseforge_tests.rs  modrinth_tests.rs  unified_search_tests.rs
