[package]
name = "ModsUpdater"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
hides-windows-console = true

[dependencies]
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zip = "0.6"
eframe = "0.33"
egui = "0.33"
indexmap = { version = "2.12.0", features = ["serde"] }
dirs = "6.0.0"
crossbeam-channel = "0.5"

[[bin]]
name = "mods_updater" 
hides-windows-console = true